likePython/errors
lista.cpp:8:32: error: ISO C++ forbids declaration of ‘setPrimoNodo’ with no type [-fpermissive]
 lista::setPrimoNodo(nodo* primo){
                                ^
lista.cpp:8:1: error: no declaration matches ‘int lista::setPrimoNodo(nodo*)’
 lista::setPrimoNodo(nodo* primo){
 ^~~~~
In file included from lista.cpp:1:
lista.h:9:8: note: candidate is: ‘void lista::setPrimoNodo(nodo*)’
   void setPrimoNodo(nodo*);
        ^~~~~~~~~~~~
lista.h:3:7: note: ‘class lista’ defined here
 class lista{
       ^~~~~
lista.cpp:12:15: error: ISO C++ forbids declaration of ‘stampa’ with no type [-fpermissive]
 lista::stampa(){
               ^
lista.cpp:12:1: error: no declaration matches ‘int lista::stampa()’
 lista::stampa(){
 ^~~~~
In file included from lista.cpp:1:
lista.h:10:8: note: candidate is: ‘void lista::stampa()’
   void stampa();
        ^~~~~~
lista.h:3:7: note: ‘class lista’ defined here
 class lista{
       ^~~~~
make: *** [<builtin>: lista.o] Error 1
